# Ofin

./: .gitignore  Cargo.toml  README.md  build.rs  demo.ofin  sample.ofin
.github/workflows/: lint.yml
docs/: _sidebar.md  index.html
docs/topics/: installation.md  syntax.md
lib/: Cargo.toml  README.md
lib/function/: Cargo.toml
lib/function/src/: lib.rs
lib/src/: filesystem.rs  internal.rs  lib.rs  prelude.rs  process.rs  random.rs  time.rs
lib/src/gui/: config.rs  error.rs  mod.rs  window.rs
lib/src/private/: mod.rs  transmute.rs
lib/src/types/: integer.rs  mod.rs  number.rs  value.rs
ofin/: Cargo.toml  build.rs
ofin-derive/: Cargo.toml
ofin-derive/src/: lib.rs
ofin-std/: Cargo.toml
ofin-std/ofin-std-common/: Cargo.toml
ofin-std/ofin-std-common/src/: alerts.rs  io.rs  keyboard.rs  lib.rs  string.rs  time.rs
ofin-std/ofin-std-common/src/keyboard/: key.rs  mod.rs
ofin-std/ofin-std-unix/: Cargo.toml
ofin-std/ofin-std-windows/: Cargo.toml
ofin-std/ofin-types/: Cargo.toml
ofin-std/ofin-types/src/: bool.rs  char.rs  int.rs  lib.rs  prelude.rs  string.rs
ofin-std/src/: lib.rs  prelude.rs
ofin/src/: cache.rs  cli.rs  error.rs  lib.rs  main.rs  pattern.rs  syntax.toml  transpiler.rs  util.rs
ofin/src/lexer/: mod.rs  syntax.rs  token.rs  tokenstream.rs  tokentype.rs
ofin/src/transpiler/: mod.rs  pattern.rs  rule.rs
src/: application.rs  build.rs  cache.rs  cli.rs  constant_table.rs  directive.rs  error.rs  expression.rs  flags.rs  lexer.rs  lib.rs  main.rs  parser.rs  program.rs  scanner.rs  source.rs  symbol_table.rs  symbols.rs  syntax.toml  token.rs  tokenizer.rs  tokens.rs  transpiler.rs  util.rs  utils.rs  value.rs
src/directive/: mod.rs
src/error/: mod.rs  runtime.rs  syntax.rs
src/errors/: cli.rs  mod.rs  tokenizer.rs
src/expression/: binding.rs  evaluator.rs  lexer.rs  math.rs  mod.rs  tests.rs
src/language/: mod.rs  syntax.rs
src/lexer/: mod.rs  syntax.rs  token.rs
src/parser/: mod.rs
src/program/: mod.rs  parse.rs  run.rs
src/statements/: assign.rs  call.rs  mod.rs  using.rs
src/symbols/: int.rs  mod.rs  string.rs
src/token/: def.rs  matcher.rs  mod.rs  rule.rs  stream.rs  t.rs  token_type.rs
src/tokenizer/: line_types.rs  mod.rs  pass_one.rs  pass_three.rs  pass_two.rs  tokenstream.rs  tokenstreamtoken.rs
src/tokenizer/line_types/: control_flow.rs  curly_bracket.rs  declare_variable.rs  mod.rs
src/vm/: expression.rs  function.rs  instruction.rs  instructions.rs  mod.rs  state.rs  value.rs
src/vm/instructions/: call.rs  import.rs  mod.rs  using.rs
src/vm/types/: mod.rs
tests/: tests.rs
tests/std/types/: integer.rs
tools/extensions/vscode/ofin/: language-configuration.json
tools/extensions/vscode/ofin/syntaxes/: ofin.tmLanguage.json
tools/plugins/vscode/: package.json
tools/plugins/vscode/ofin/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
tools/plugins/vscode/ofin/syntaxes/: ofin.tmLanguage.json
tools/plugins/vscode/syntaxes/: ofin.tmLanguage.json
tools/scripts/: install.sh
trace/: Cargo.toml
trace/src/: lib.rs
