[package]
name = "ofin"
version = "0.0.1"
authors = ["Nigecat"]
edition = "2018"
autobins = false

[[bin]]
name = "ofin"
path = "src/bin/main.rs"

[dependencies]
md5 = "0.7.0"
log = "0.4.11"
pcre2 = "0.2.3"
regex = "1.4.2"
tempfile = "3.1.0"
include_dir = "0.6"
thiserror = "1.0.22"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.7", features = ["preserve_order"] }

[build-dependencies]
glob = "0.3"
which = "4.0.2"
snailquote = "0.3"