[package]
name = "ofin"
version = "0.0.1"
description = "A hotkey scripting language"
authors = ["Nigecat"]
edition = "2018"
repository = "https://github.com/Nigecat/Ofin"

[dependencies]
ofin-std = { path = "lib" }

regex = "1.4.3"
fancy-regex = "0.5.0"

colored = "2.0.0"
structopt = "0.3.21"
thiserror = "1.0.24"
lazy_static = "1.4.0"

tracing-subscriber = "0.2.16"
tracing = { version = "0.1.25", features = ["log"] }

[build-dependencies]
built = { version = "0.4.4", features = ["chrono", "git2"] }
