[package]
name = "ofin"
version = "0.0.1"
description = "A hotkey scripting language"
authors = ["Nigecat"]
edition = "2018"
repository = "https://github.com/Nigecat/Ofin"

[dependencies]
ofin-std = { path = "lib" }

thiserror = "1.0.24"

tracing = "0.1.25"
tracing-subscriber = "0.2.16"

[build-dependencies]
built = { version = "0.4.4", features = ["chrono", "git2"] }

