[package]
name = "ofin-std"
version = "0.0.1"
authors = ["Nigecat"]
edition = "2018"

# [features]
# default = ["gui"]
# gui = ["iui"]

# [dependencies]
# rand = "0.8.3"
# tracing = "0.1.25"
thiserror = "1.0.24"
lazy_static = "1.4.0"
# iui = { version = "0.3.0", optional = true }

# [dependencies.derive_more]
# version = "0.99.13"
# default-features = false
# features = ["add", "mul", "not", "display", "deref"]
