[package]
name = "ofin"
version = "0.0.1"
authors = ["Nigecat"]
edition = "2018"

[dependencies]
regex = "1"
md5 = "0.7.0"
log = "0.4.11"
which = "4.0.2"
bincode = "1.3.1"
thiserror = "1.0.22"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
ofin-std = { path = "../ofin-std" }
serde = { version = "1.0", features = ["derive"] }