[package]
name = "ofin"
version = "0.0.1"
authors = ["Nigecat"]
edition = "2018"

[dependencies]
md5 = "0.7.0"
log = "0.4.11"
pcre2 = "0.2.3"
regex = "1.4.2"
tempfile = "3.1.0"
thiserror = "1.0.22"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
ofin-std = { path = "../ofin-std" }
ofin-derive = { path = "../ofin-derive" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.7", features = ["preserve_order"] }

[build-dependencies]
which = "4.0.2"